[gd_scene load_steps=6 format=2]

[ext_resource path="res://Project/Resources/Themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansOutlined.tres" type="DynamicFont" id=2]
[ext_resource path="res://Project/UI/ButtonHint/ButtonHint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/WorldObjects/Dialog/DialogUIComponents/InteractionPopup/InteractionPopup.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/SFX/General/pop/pop_pixabay/pop_5.mp3" type="AudioStream" id=5]

[node name="InteractionPopup" type="Node2D"]
z_index = 5
script = ExtResource( 4 )

[node name="Audio" type="Node" parent="."]

[node name="ShowDialogAudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )

[node name="MarginNode" type="Node2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="MarginNode"]
light_mask = 0
margin_left = -39.0
margin_top = -40.0
margin_right = 41.0
mouse_filter = 2
size_flags_horizontal = 0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginNode/CenterContainer"]
light_mask = 0
margin_left = 27.0
margin_top = 13.0
margin_right = 52.0
margin_bottom = 26.0
mouse_filter = 2
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MarginNode/CenterContainer/HBoxContainer"]
light_mask = 0
margin_right = 17.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "talk"

[node name="ButtonHint" parent="MarginNode/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 6.0
margin_right = 25.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 0.495199, -0.379669 )
mouse_filter = 2

[node name="Tween" type="Tween" parent="."]
